fix: aligned the position of the main page elements according to the layout

--- a/webdev/style.css
+++ b/webdev/style.css
@@ -24,8 +24,7 @@ a {
     outline: none;
 }
 
-.wrapper {
-    position: relative;
+.wrapper {    
     display: flex;
     flex-direction: column;
     min-height: 100%;
@@ -54,19 +53,19 @@ a {
 
 .header__menu-list {
     display: flex;
-    margin: 0 13px 0 0;
+    margin: 2px 53px 0 0;
 }
 
 .menu-list__item {
-    padding: 0 42px;
+    padding: 0 42.5px;
 }
 
 .menu-list__item:nth-child(2) {
-    padding: 0 122px 0 42px;
+    padding: 0 122.5px 0 42.5px;
 }
 
 .menu-list__item:nth-child(3) {
-    padding: 0 42px 0 122px;
+    padding: 0 42.5px 0 122.5px;
 }
 
 .menu__link {
@@ -117,16 +116,19 @@ a {
 
 .main-banner {
     position: absolute;
-    top: 0;
-    width: 100%;
-    height: 744px;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 1600px;
+  height: 744px;
     background-image: url('./assets/bg-image.png');
     background-repeat: no-repeat;
 }
 
 .main-banner__content {
     position: absolute;
-    top: 229px;
+    top: 228px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -136,21 +138,20 @@ a {
 
 .main-banner__title {
     padding-left: 5px;
-    height: 75px;
-    font-style: normal;
+    height: 75px;    
     font-weight: 700;
     font-size: 64px;
     letter-spacing: 4.5px;
     text-transform: uppercase;
     color: #FFFFFF;
+    margin: 0;
 }
 
 .main-banner__text {
-    margin-top: 20px;
+    margin-top: 23px;
     width: 504px;
-    height: 50px;
-    font-style: normal;
-    font-weight: normal;
+    height: 50px;    
+    font-weight: 400;
     font-size: 18px;
     line-height: 140%;
     text-align: center;
@@ -158,7 +159,7 @@ a {
 }
 
 .button {
-    margin-top: 16px;
+    margin-top: 11px;
     padding: 0 6px 0 3px;
     width: 184px;
     height: 46px;
@@ -179,7 +180,7 @@ a {
 
 .socials {
     position: absolute;
-    bottom: 100px;
+    bottom: 104px;
     left: 50%;
     margin-left: -105px;
     width: 170px;
@@ -210,7 +211,7 @@ a {
     display: flex;
     width: 100%;
     height: 842px;
-    background: #fff;
+    background: #FFFFFF;
 }
 
 .page-2__content {
